--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,56 @@
-body {
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  font-family: 'Courier New', Courier, monospace; 
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+video {
+  width: 100%; 
+  height: 100%; 
+  object-fit: cover; 
 }
+
+.content {
+  position: absolute; 
+  width: 100%;
+  height: 100%; 
+  top: 0;
+  display: flex; 
+  flex-direction: column; 
+  justify-content: center; 
+  align-items: center; 
+  color: white; 
+}
+
+.social-container {
+  background: #eee;
+  padding: 25px 50px; 
+  text-align: center;
+}
+
+a.social {
+  margin: 0 1rem; 
+  transition: transform 250ms; 
+  display: inline-block; 
+}
+
+a.social:hover {
+  transform: translateY(-2px); 
+}
+
+a.instagram {
+  color: black; 
+}
+
+a.slack {
+  color: black; 
+}
+
+a.twitter {
+  color: black; 
+}
+
+a.facebook {
+  color: black; 
+}
+
